--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   firebase_core: ^2.9.0
+  firebase_auth: ^4.6.2
   cloud_firestore: ^4.5.0
-  flutter_stripe: ^9.0.0+1
-  flutter_dotenv: ^5.0.2
   http: ^0.13.5
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
