--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^4.5.0
   http: ^0.13.5
   shared_preferences: ^2.1.1
+  flutter_spinkit: ^5.2.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
