--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_spinkit: ^5.2.0
   intl: ^0.18.1
   short_uuids: ^2.0.0
+  geolocator: ^7.0.3
+  geodesy: ^0.6.0
+  fluttertoast: ^8.2.2
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
