--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
   assets:
     - assets/.env
     - assets/images/logo.png
+    - assets/images/indian_flag.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
