--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   fluttertoast: ^8.2.2
   get: ^4.6.5
   pinput: ^2.2.16
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
