--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,7 +84,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/.env
+    # - assets/.env
     - assets/images/logo.png
     - assets/images/indian_flag.jpg
 
